<?xml version="1.0" encoding="utf-8"?>
<!--
 Survey Fragment Layout
 Copyright (c) 2020 Jean-Olivier Dalphond <jean-olivier.dalphond@polymtl.ca>
 -->
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
        <data>
                <import type="android.view.View" />
                <variable
                    name="viewModel"
                    type="com.polybixi.survey.SurveyViewModel"/>
        </data>
        <androidx.constraintlayout.widget.ConstraintLayout
            tools:context="com.polybixi.survey.SurveyFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp">
                <LinearLayout
                    android:id="@+id/afterSurveyContainer"
                    android:visibility="@{viewModel.surveyAlreadySent? View.VISIBLE: View.GONE}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:minWidth="400dp"
                    android:maxWidth="600dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="30dp">
                                <ImageView
                                    android:src="@drawable/ic_bixilogo">
                                </ImageView>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <TextView
                                    android:textSize="24dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/afterSurveyText"/>
                        </TableRow>
                        <TableRow android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <Button
                                    android:textSize="20dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/afterSurveyReset"
                                    android:onClick="@{()->viewModel.resetSurvey()}"/>
                        </TableRow>
                        <TableRow android:layout_width="match_parent"
                            android:layout_height="match_parent">
                                <Button
                                    android:id="@+id/surveyNavigateToSearchButton"
                                    android:textSize="20dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:onClick="@{()->viewModel.navigateToSearch()}"
                                    android:text="@string/navigateToResearchButtonText"/>
                        </TableRow>
                </LinearLayout>
                <LinearLayout
                    android:visibility="@{viewModel.surveyAlreadySent? View.GONE: View.VISIBLE}"
                    android:id="@+id/surveyContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:minWidth="400dp"
                    android:maxWidth="600dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp">
                                <TextView
                                    android:textSize="20dp"
                                    android:id="@+id/surveyEmailLabel"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.3"
                                    android:text="@string/surveyEmailLabel" />
                                <EditText
                                    android:textSize="24dp"
                                    android:id="@+id/surveyEmailAddress"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ems="10"
                                    android:maxLength="100"
                                    android:paddingStart="5dp"
                                    android:paddingEnd="5dp"
                                    android:hint="@string/surveyEmail"
                                    android:inputType="textEmailAddress"
                                    android:background="@{viewModel.emailValid? @drawable/et_edit_text_normal : @drawable/et_solid}"
                                    android:text="@={viewModel.email}"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp">
                                <TextView
                                    android:textSize="20dp"
                                    android:id="@+id/surveyFirstNameLabel"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.3"
                                    android:text="@string/surveyFirstNameLabel" />
                                <EditText
                                    android:textSize="24dp"
                                    android:id="@+id/surveyFirstName"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:maxLength="25"
                                    android:ems="10"
                                    android:paddingStart="5dp"
                                    android:paddingEnd="5dp"
                                    android:hint="@string/surveyFirstName"
                                    android:inputType="textPersonName"
                                    android:background="@{viewModel.firstNameValid? @drawable/et_edit_text_normal : @drawable/et_solid}"
                                    android:text="@={viewModel.firstName}"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp">
                                <TextView
                                    android:textSize="20dp"
                                    android:id="@+id/surveyLastNameLabel"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.3"
                                    android:text="@string/surveyLastNameLabel" />
                                <EditText
                                    android:textSize="24dp"
                                    android:id="@+id/surveyLastName"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ems="10"
                                    android:maxLength="25"
                                    android:hint="@string/surveyLastName"
                                    android:paddingStart="5dp"
                                    android:paddingEnd="5dp"
                                    android:background="@{viewModel.lastNameValid? @drawable/et_edit_text_normal : @drawable/et_solid}"
                                    android:inputType="textPersonName"
                                    android:text="@={viewModel.lastName}"/>
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="3dp"
                            android:paddingBottom="3dp">
                                <TextView
                                    android:textSize="20dp"
                                    android:id="@+id/surveyAgeLabel"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.3"
                                    android:text="@string/surveyAgeLabel" />
                                <EditText
                                    android:textSize="24dp"
                                    android:id="@+id/surveyAge"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ems="10"
                                    android:maxLength="3"
                                    android:hint="@string/surveyAge"
                                    android:inputType="number"
                                    android:paddingStart="5dp"
                                    android:paddingEnd="5dp"
                                    android:text="@={viewModel.age}"
                                    android:background="@{viewModel.ageValid? @drawable/et_edit_text_normal : @drawable/et_solid}" />
                        </TableRow>
                        <CheckBox
                            android:textSize="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:id="@+id/surveyInterest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/surveyInterest"
                            android:checked="@{viewModel.interest}" />
                        <Button
                            android:textSize="20dp"
                            android:id="@+id/surveyButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/surveySubmit"
                            android:onClick="@{()->viewModel.sendSurvey()}"/>
                </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>